Fixed rendering on iOS and iE 11

--- a/src/assets/styles/reset.scss
+++ b/src/assets/styles/reset.scss
@@ -64,8 +64,8 @@ img {
 }
 
 *:focus {
-  outline: 2px solid rgba(22, 177, 169, .25);
-  box-shadow: 0 0 0 2px rgba(22,177,169,.25);
+  outline: none;
+  box-shadow: none;
 }
 
 /* stylelint-enable */
